# rede-neural-churn

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ML_Canvas.md
notebooks/: 01_eda_and_baseline.ipynb
src/customer_churn_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: preprocess.py
src/models/: train_baselines.py
src/utils/: logger.py
