[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Tech Challenge Fase 01 - Churn Prediction with PyTorch and FastAPI"
authors = [
    { name = "Ray Santos" },
    { name = "Amanda Silveira" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0",
    "mlflow>=2.6.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.0.280",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
